--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -21,9 +21,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-  <script src="https://kit.fontawesome.com/ec76a4ad3e.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/ec76a4ad3e.js" crossorigin="anonymous"></script> -->
   <title>React App</title>
 </head>
 
