Added razorpay client script

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,6 +25,7 @@
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/ec76a4ad3e.js" crossorigin="anonymous"></script> -->
   <title>React App</title>
+  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 </head>
 
 <body>
